# -Snake-on-CPP

./: CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_uninstall.cmake.in  main.cpp
brick_game/common/: common_backend.c  common_backend.h
brick_game/snake/: backend.cpp  backend.h  snake_game.cpp  snake_game.h
brick_game/tetris/: tetris_backend.c  tetris_backend.h
gui/cli/: frontend.c  frontend.h  snake_cli.c  snake_cli.h  tetris_cli.c  tetris_cli.h
gui/desktop/: game_widget.cpp  game_widget.h  main_menu_window.cpp  main_menu_window.h  snake_window.cpp  snake_window.h  tetris_game_widget.cpp  tetris_game_widget.h  tetris_window.cpp  tetris_window.h
tests/: test_common.cpp  test_snake.cpp  test_tetris.cpp
